# apertium-arg-cat

./: .gitattributes  AUTHORS  Makefile.am  NEWS  README  apertium-arg-cat.arg-cat.dix  apertium-arg-cat.arg-cat.lrx  apertium-arg-cat.arg-cat.t1x  apertium-arg-cat.cat-arg.lrx  apertium-arg-cat.cat-arg.t1x  configure.ac  modes.xml
.github/workflows/: bilingual.yml
dev/testvoc/: inconsistency.sh  testvoc-summary.arg-cat.txt  testvoc-summary.cat-arg.txt  testvoc.sh
t/: config.sh
test/: arg-cat-biltrans-expected.txt  arg-cat-chunker-expected.txt  arg-cat-generator-expected.txt  arg-cat-input.txt  arg-cat-morph-expected.txt  arg-cat-postgen-expected.txt  arg-cat-pretransfer-expected.txt  cat-arg-biltrans-expected.txt  cat-arg-chunker-expected.txt  cat-arg-disam-expected.txt  cat-arg-generator-expected.txt  cat-arg-input.txt  cat-arg-postgen-expected.txt  cat-arg-tagger-expected.txt  tests.json
